Create GUI window with a basic menu bar
Currently, the light theme is always used, but the code can be easily
changed to use the dark theme instead. In the future, this should be
loaded from some kind of user preferences file, but I don't know what
file format we'll be using for that yet.

A few Java system properties are set on startup to make the application
work better on macOS. I don't have a Mac to test these, but they should
make the application use the macOS menu bar and set the window title bar
appearance.

The application's name (used in the window title and About menu item)
can also be easily changed because I'm not sure what it should be.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
         <spotless.version>2.30.0</spotless.version>
         <palantir-java-format.version>2.28.0</palantir-java-format.version>
 
+        <!-- FlatLaf: Custom theme for Java Swing, used to make the UI
+             consistent across operating systems. -->
+        <flatlaf.version>3.0</flatlaf.version>
+
         <!-- Tell Maven to use Java 19 with UTF-8 encoding. -->
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
@@ -35,6 +39,11 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>${jsr305.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>${flatlaf.version}</version>
         </dependency>
     </dependencies>
 
