Implement core of help viewer
The layout of the help viewer consists of a tree view of help pages on
the left and the contents of one page to the right. This is fairly
standard for help and documentation viewers AFAIK.

Currently, the help viewer will load the list of pages from a JSON file
and will load the contents of the help home page. Navigation has not
been implemented yet.

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
              consistent across operating systems. -->
         <flatlaf.version>3.0</flatlaf.version>
         <flatlaf-extras.version>1.1.4</flatlaf-extras.version>
+        <!-- Jackson: Used to serialize and deserialize JSON data. -->
+        <jackson.version>2.14.2</jackson.version>
 
         <!-- Tell Maven to use Java 19 with UTF-8 encoding. -->
         <maven.compiler.source>19</maven.compiler.source>
@@ -50,6 +52,11 @@
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-extras</artifactId>
             <version>${flatlaf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
