--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
              consistent across operating systems. -->
         <flatlaf.version>3.0</flatlaf.version>
         <flatlaf-extras.version>1.1.4</flatlaf-extras.version>
+        <!-- Inter font for FlatLaf: Use the same font across platforms. -->
+        <flatlaf-fonts-inter.version>3.19</flatlaf-fonts-inter.version>
         <!-- Jackson: Used to serialize and deserialize JSON data. -->
         <jackson.version>2.14.2</jackson.version>
 
@@ -52,6 +54,11 @@
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-extras</artifactId>
             <version>${flatlaf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-fonts-inter</artifactId>
+            <version>${flatlaf-fonts-inter.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
