Prevent future commits directly to master
We will be using branches and pull requests for development, so this
commit introduces a check to prevent committing directly to the master
branch.

Some previous commits were already done directly on the master branch;
this commit does not change those.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,9 @@ repos:
       - id: 'destroyed-symlinks'
       - id: 'end-of-file-fixer'
       - id: 'trailing-whitespace'
+      - id: 'no-commit-to-branch'
+        name: "don't commit to master"
+        args: ['--branch', 'master']
   - repo: 'https://github.com/ejba/pre-commit-maven'
     rev: 'v0.3.3'
     hooks:
