--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <flatlaf-fonts-inter.version>3.19</flatlaf-fonts-inter.version>
         <!-- Jackson: Used to serialize and deserialize JSON data. -->
         <jackson.version>2.14.2</jackson.version>
+        <!-- SVG Salamander: Used to load and display SVG files. -->
+        <svgsalamander.version>1.1.3</svgsalamander.version>
 
         <!-- Tell Maven to use Java 19 with UTF-8 encoding. -->
         <maven.compiler.source>19</maven.compiler.source>
@@ -64,6 +66,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>svgSalamander</artifactId>
+            <version>${svgsalamander.version}</version>
         </dependency>
     </dependencies>
 
