--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
         <!-- SVG Salamander: Used to load and display SVG files. -->
         <svgsalamander.version>1.1.3</svgsalamander.version>
 
+        <!-- JUnit and Maven Surefire Plugin: Used for writing and running
+             automated unit tests. -->
+        <junit.version>5.8.2</junit.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <junit-platform-surefire-provider.version>1.1.0</junit-platform-surefire-provider.version>
+
         <!-- Tell Maven to use Java 19 with UTF-8 encoding. -->
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
@@ -72,6 +78,26 @@
             <artifactId>svgSalamander</artifactId>
             <version>${svgsalamander.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Note: If you're adding dependencies here, make sure to put the
+             version as a Maven property instead of hardcoding it here. -->
     </dependencies>
 
     <!-- Configuration for compile-time code linters and formatters. -->
@@ -124,6 +150,17 @@
                         </sortPom>
                     </pom>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit-platform-surefire-provider.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
