--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <junit.version>5.8.2</junit.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <junit-platform-surefire-provider.version>1.1.0</junit-platform-surefire-provider.version>
+        <!-- JSONassert: Used to write unit tests involving JSON data. -->
+        <jsonassert.version>1.5.1</jsonassert.version>
 
         <!-- Tell Maven to use Java 19 with UTF-8 encoding. -->
         <maven.compiler.source>19</maven.compiler.source>
@@ -94,6 +96,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>${jsonassert.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- Note: If you're adding dependencies here, make sure to put the
