--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
       - id: 'no-commit-to-branch'
         name: "don't commit to master"
         args: ['--branch', 'master']
+      - id: 'pretty-format-json'
+        args: ['--autofix']
   - repo: 'https://github.com/ejba/pre-commit-maven'
     rev: 'v0.3.3'
     hooks:
