Add pre-commit hook to detect merge conflicts

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
         args: ['--branch', 'master']
       - id: 'pretty-format-json'
         args: ['--autofix']
+      - id: 'check-merge-conflict'
   - repo: 'https://github.com/ejba/pre-commit-maven'
     rev: 'v0.3.3'
     hooks:
